--- a/frontend/textmemoirs/pubspec.yaml
+++ b/frontend/textmemoirs/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   chat_bubbles: ^1.4.0
+  flutter_scroll_to_top: ^2.3.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
