--- a/frontend/textmemoirs/pubspec.yaml
+++ b/frontend/textmemoirs/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   chat_bubbles: ^1.4.0
   flutter_scroll_to_top: ^2.3.0
   http: ^0.13.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
