--- a/frontend/textmemoirs/pubspec.yaml
+++ b/frontend/textmemoirs/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_scroll_to_top: ^2.3.0
   http: ^0.13.5
   intl: ^0.17.0
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
